--- a/EEG.html
+++ b/EEG.html
@@ -4,192 +4,124 @@
   <title>SkyNet Biometric Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
   <style>
-    /* === FULLSCREEN CAMERA BACKGROUND === */
-    #camera {
+    :root {
+      --bg: #000;
+      --fg: #fff;
+      --panel-bg: rgba(255,255,255,0.06);
+      --accent: #39FF14;
+    }
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--fg);
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+    #camera, #overlay {
       position: fixed;
-      top: 0; left: 0;
+      inset: 0;
       width: 100vw;
       height: 100vh;
       object-fit: cover;
       z-index: 0;
-      background: black;
     }
-
-    /* === FULLSCREEN CANVAS OVERLAY === */
-    #overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      pointer-events: none;
-      z-index: 1;
-    }
-
-    /* === FLOATING HUD PANEL WRAPPER (TRANSPARENT) === */
-    #dashboardWrap {
-      position: relative;
-      margin-top: 20px;
-      z-index: 3;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-    }
-
-    .dashboard {
-      width: 95%;
-      max-width: 900px;
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-    }
-
-    /* === PANELS (SEMI-TRANSPARENT FLOATING CARDS) === */
-    .panel {
-      background: rgba(0,0,0,0.35);
-      backdrop-filter: blur(10px);
-      padding: 15px;
-      border-radius: 15px;
-      color: white;
-      box-shadow: 0px 0px 12px rgba(0,0,0,0.6);
-    }
-
-    h3 {
-      margin-top: 0;
-      color: #fff;
-    }
-
-    .chart {
-      width: 100%;
-      height: 200px;
-    }
-
-    /* === STATUS BADGE === */
+    #overlay { z-index: 1; pointer-events: none; }
     #statusBadge {
       position: fixed;
-      top: 20px;
-      left: 20px;
-      padding: 8px 14px;
-      background: rgba(0,0,0,0.45);
-      backdrop-filter: blur(10px);
-      color: white;
-      border-radius: 10px;
-      z-index: 4;
-      font-size: 18px;
+      top: 12px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 6;
+      background: rgba(0,0,0,0.55);
+      color: var(--accent);
+      padding: 8px 20px;
+      border-radius: 8px;
+      font-weight: 800;
     }
-
-    /* === BUTTON PANEL === */
-    #togglePanel {
-      position: fixed;
-      top: 70px;
-      left: 20px;
-      display: flex;
-      gap: 8px;
-      z-index: 4;
-    }
-
-    .icon-btn {
-      font-size: 24px;
-      padding: 8px 10px;
-      border-radius: 12px;
-      background: rgba(0,0,0,0.45);
-      backdrop-filter: blur(10px);
-      color: white;
-      border: 1px solid rgba(255,255,255,0.3);
-    }
-
-    #panelHandle {
-      position: fixed;
-      top: 120px;
-      left: 16px;
-      font-size: 28px;
-      color: white;
-      z-index: 4;
-    }
-
-    /* === FOOTER SLIDERS === */
-    .footer {
-      position: fixed;
-      bottom: 10px;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      padding: 0 20px;
-      z-index: 4;
-      color: white;
-    }
-
-    .sliders {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .slider-wrap {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      background: rgba(0,0,0,0.45);
-      padding: 6px 12px;
-      border-radius: 10px;
-      backdrop-filter: blur(10px);
-    }
-
-    input[type=range] {
-      width: 150px;
-    }
-
-    #countdown {
-      background: rgba(0,0,0,0.45);
-      padding: 8px 12px;
-      border-radius: 10px;
-      backdrop-filter: blur(10px);
-    }
-
-    /* === FLIP CAMERA BUTTON === */
     #flipCameraBtn {
       position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 4;
-      padding: 10px 18px;
-      font-size: 18px;
-      border-radius: 12px;
-      color: white;
-      background: rgba(0,0,0,0.45);
-      border: 1px solid rgba(255,255,255,0.3);
-      backdrop-filter: blur(10px);
+      top: 12px;
+      right: 12px;
+      z-index: 6;
+      background: rgba(0,0,0,0.55);
+      color: #fff;
+      padding: 8px 12px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 700;
+    }
+    #dashboardWrap {
+      position: relative;
+      z-index: 2;
+      width: 100%;
+      height: calc(100vh - 110px);
+      margin-top: 64px;
+      overflow-y: auto;
+    }
+    .dashboard {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 10px;
+      width: 95%;
+      max-width: 1300px;
+      margin: 0 auto;
+    }
+    .panel {
+      background: var(--panel-bg);
+      border-radius: 10px;
+      padding: 10px;
+    }
+    canvas.chart {
+      width: 100%;
+      height: 220px;
+    }
+    #fusionEq {
+      margin-top: 8px;
+      text-align: center;
+      font-size: 20px;
+    }
+    .footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 3;
+      background: rgba(0,0,0,0.35);
+      padding: 10px 12px;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 8px;
+    }
+    .footer .sliders {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 10px;
+    }
+    @media (max-width: 600px) {
+      .footer .sliders { grid-template-columns: 1fr; }
+    }
+    @media (min-width: 768px) {
+      .dashboard { grid-template-columns: 1fr 1fr; }
+    }
+    @media (min-width: 1200px) {
+      .dashboard { grid-template-columns: 1fr 1fr 1fr; }
     }
   </style>
 </head>
-
 <body>
 
-<!-- CAMERA + OVERLAY -->
 <video id="camera" autoplay muted playsinline></video>
 <canvas id="overlay"></canvas>
 
-<!-- STATUS + BUTTONS -->
 <div id="statusBadge">Analyzing</div>
 <button id="flipCameraBtn">Flip Camera</button>
 
-<div id="togglePanel">
-  <button class="icon-btn" id="btnThermal">🌡️</button>
-  <button class="icon-btn" id="btnEEG">🧠</button>
-  <button class="icon-btn" id="btnAnnotations">✳️</button>
-  <button class="icon-btn" id="btnSpectra">📈</button>
-  <button class="icon-btn" id="btnSnapshot">📸</button>
-</div>
-<div id="panelHandle">›</div>
-
-<!-- DASHBOARD -->
 <div id="dashboardWrap">
   <div class="dashboard">
     <div class="panel"><h3>Heart Rate</h3><canvas id="rppgChart" class="chart"></canvas></div>
     <div class="panel"><h3>EEG</h3><canvas id="eegChart" class="chart"></canvas></div>
     <div class="panel"><h3>rPPG</h3><canvas id="rppgFFT" class="chart"></canvas></div>
-
     <div class="panel">
       <h3>Fusion</h3>
       <div id="fusionOutput">
@@ -198,15 +130,13 @@
         <div id="coherenceFusion">3. Cross-Spectral Coherence: 0</div>
       </div>
       <div id="fusionEq">
-        $$F_{\text{fusion}}(f) = FFT_{EEG}(f) + FFT_{rPPG}(f) + FFT_{HR}(f)$$
+        $$F_{\text{fusion}}(f) = \text{FFT}_{\text{EEG}}(f) + \text{FFT}_{\text{rPPG}}(f) + \text{FFT}_{\text{HR}}(f)$$
       </div>
     </div>
-
     <div class="panel"><h3>CPU/GPU</h3><canvas id="sysFlow" class="chart"></canvas></div>
   </div>
 </div>
 
-<!-- FOOTER -->
 <div class="footer">
   <div class="sliders">
     <div class="slider-wrap"><div class="label">🎚️</div><input type="range" id="smoothing" min="0" max="1" step="0.1" value="0.5"></div>
@@ -216,36 +146,46 @@
   <div class="right"><div id="countdown">Next auto-save: 60s</div></div>
 </div>
 
-<!-- LIBRARIES -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <script>
-/* ====== CAMERA AUTO-START + FLIP ====== */
-let useFront = true;
+// Camera init + flip
+let facingMode = "user";
+function startCamera() {
+  navigator.mediaDevices.getUserMedia({ video: { facingMode }, audio: false })
+    .then(stream => { document.getElementById('camera').srcObject = stream; })
+    .catch(err => { console.error("Camera error:", err); });
+}
+startCamera();
+document.getElementById('flipCameraBtn').addEventListener('click', () => {
+  facingMode = (facingMode === "user") ? "environment" : "user";
+  startCamera();
+});
 
-async function startCamera() {
-  try {
-    const stream = await navigator.mediaDevices.getUserMedia({
-      video: { facingMode: useFront ? "user" : "environment" }
-    });
-    document.getElementById("camera").srcObject = stream;
-  } catch (err) {
-    console.error("Camera error:", err);
-  }
+// Screenshot fix: capture full dashboard including all charts + LaTeX
+async function captureDashboardPNG(customName=null){
+  const target = document.getElementById('dashboardWrap');
+  const canvas = await html2canvas(target, {
+    useCORS: true,
+    logging: false,
+    scale: 1,
+    scrollY: -window.scrollY,
+    windowWidth: document.documentElement.scrollWidth,
+    windowHeight: document.documentElement.scrollHeight
+  });
+  const link=document.createElement('a');
+  const fname=customName || `dashboard_${new Date().toISOString().replace(/[:.]/g,'-')}.png`;
+  link.download=fname;
+  link.href=canvas.toDataURL('image/png');
+  link.click();
 }
 
-document.getElementById("flipCameraBtn").onclick = () => {
-  useFront = !useFront;
-  startCamera();
-};
-
-startCamera();
-
-/* Your detection / rPPG / EEG / fusion / charts go here */
+// Example chart init
+const rppgCtx=document.getElementById('rppgChart').getContext('2d');
+const rppgChart=new Chart(rppgCtx,{type:'line',data:{labels:[],datasets:[{label:'Heart Rate',data:[]}]},options:{responsive:true}});
 </script>
-
 </body>
 </html>
